# bgbot

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/bgbot/: __init__.py  main.py
src/bgbot/simulator/: __init__.py  board.py  board.txt  combat.py  combat.txt  events.py  game.py  gameSetup.py  heroes.txt  minion.py  player.py  pool.py  pool.txt  spell.txt  tavern.py  tavern.txt
src/bgbot/simulator/combat/: combat.py  combat.txt
src/bgbot/simulator/tavern/: tavern.txt
