[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bgbot"
version = "0.1.0"
description = "Bare-bones async/ML sandbox"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "torch==2.7.1",
  "tensorflow==2.19.0",
]

[project.optional-dependencies]
dev   = ["black", "ruff", "pytest", "mypy", "pre-commit"]
cyext = ["cython==3.1.2"]

[tool.setuptools.packages.find]
where = ["src"]
